--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="services.html">Services</a>
+    <a href="providers.html">Providers</a>
+    <a href="FAQ.html">FAQ</a>
+    <a href="extrahelp.html">Extra Help</a>
+    <a href="contact.html">Contact</a>
+  </nav>
 
+<body>
+
+</body>
+
+</html>
