--- a/contact.html
+++ b/contact.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<title>Waubonsie Mental Health Center</title>
+		<meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <div class="topnav">
+    <a class="active" href="index.html">Home</a>
+    <a href="services.html">Services</a>
+    <a href="providers.html">Providers</a>
+    <a href="FAQ.html">FAQ</a>
+    <a href="extrahelp.html">Extra Help</a>
+    <a href="contact.html">Contact</a>
+  </div>
 
-<head>
-  <title>Contact Us</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-  <div id="wrapper">
-    <header>
-      <h1>Contact Us<h1>
-    </header>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="services.html">Services</a>
-      <a href="providers.html">Providers</a>
-      <a href="FAQ.html">FAQ</a>
-      <a href="extrahelp.html">Extra Help</a>
-      <a href="contact.html">Contact</a>
-    </nav>
+  <body>
     <main>
       <h2>Our Locations and When You Can Reach Out to Us</h2>
       <h3>Clarinda</h3>
@@ -46,6 +42,11 @@
       <h4>24 Hours Per Day</h4>
       <h4>7 Days Per Week</h4>
       <p>Ph. (712) 303-7066</p>
-</body>
 
+      <footer>
+          <hr>
+          <p class="copyright-text">Copyright &copy; 2021 Waubonsie Mental Health Center
+          </p>
+      </footer>
+</body>
 </html>
