--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
 					<h4>Days: 7 Days Per Week</h4>
 				</li>
 				<li>
-					<h4>Phone Numebr:</h4>
+					<h4>Phone Numeber:</h4>
 					<p>Ph. (712) 303-7066</p>
 				</li>
 			</ul>
