--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
     <a href="contact.html">Contact</a>
   </div>
 <body>
+	<div class="csh">
+		<p>24/7 Crisis Support Hotline ---- (712) 303-7066</p>
+	</div>
+	<br>
+	<table>
+    <tr>
+        <td><img src="Client Files\Client Files\Images\WMHC 2021.jpg" alt="WMHC"></td>
+        <td>Waubonsie Mental Health Center</td>
+    </tr>
+	</table>
+
+
+
 
 
 
