--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,9 @@
   </div>
 
   <body>
+		<div class="csh">
+			<p>24/7 Crisis Support Hotline ---- (712) 303-7066</p>
+		</div>
     <main>
       <h2>Our Locations and When You Can Reach Out to Us</h2>
       <h3>Clarinda</h3>
