--- a/ihh.html
+++ b/ihh.html
@@ -14,7 +14,9 @@
     <a href="contact.html">Contact</a>
   </div>
 <body>
-
+	<div class="csh">
+		<p>24/7 Crisis Support Hotline ---- (712) 303-7066</p>
+	</div>
 
 
 <footer>
