Images and Providers
I added images to the proper folder, fixed the images on the index page, and added images to the providers page

--- a/index.html
+++ b/index.html
@@ -1,112 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>Waubonsie Mental Health Center</title>
-		<meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <div class="topnav">
-    <a class="active" href="index.html">Home</a>
-    <a href="services.html">Services</a>
-    <a href="providers.html">Providers</a>
-    <a href="FAQ.html">FAQ</a>
-    <a href="extrahelp.html">Extra Help</a>
-    <a href="contact.html">Contact</a>
-  </div>
+
+<head>
+	<title>Waubonsie Mental Health Center</title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" href="style.css">
+</head>
+<div class="topnav">
+	<a class="active" href="index.html">Home</a>
+	<a href="services.html">Services</a>
+	<a href="providers.html">Providers</a>
+	<a href="FAQ.html">FAQ</a>
+	<a href="extrahelp.html">Extra Help</a>
+	<a href="contact.html">Contact</a>
+</div>
 
 <body>
 	<div class="csh">
 		<p>24/7 Crisis Support Hotline ---- (712) 303-7066</p>
 	</div>
 	<br>
- 	<div class="homeimage">
-		<img src="C:\Users\S535331\Desktop\project\client-project-group2morganburright\Client Files\Client Files\Images\home.jpeg"
-		alt="Waubonsie Mental Health Center">
+	<div class="homeimage">
+		<img src="WMHC 2021.jpg" alt="Waubonsie Mental Health Center">
 	</div>
 
 	<table>
-	    <tr>
-					<td><h3>WHO WE ARE</h3>
-						<p>Waubonsie Mental Health Center is an accredited, non-profit, Community Mental Health Center. Since opening in 1982,
-							it has been our mission to provide accessible, affordable, quality mental health
-							services to the people of southwest Iowa.</p>
-						<p><i>The Center does not discriminate in regard to race, color, creed, national origin, sex, religion, age,
-							 sexual orientation, physical disability, or mental disability in providing services in any of our programs.</p></td>
-	        <td><img src="C:\Users\S535331\Desktop\project\client-project-group2morganburright\Client Files\Client Files\Images\Dream big.jpg"
-					alt="Dream Big"></td>
-	    </tr>
+		<tr>
+			<td>
+				<h3>WHO WE ARE</h3>
+				<p>Waubonsie Mental Health Center is an accredited, non-profit, Community Mental Health Center. Since opening in 1982,
+					it has been our mission to provide accessible, affordable, quality mental health
+					services to the people of southwest Iowa.</p>
+				<p><i>The Center does not discriminate in regard to race, color, creed, national origin, sex, religion, age,
+						sexual orientation, physical disability, or mental disability in providing services in any of our programs.</p>
+			</td>
+			<td><img src="Dream big.jpg" alt="Dream Big"></td>
+		</tr>
 	</table>
 
-<div id="contact">
-	<div class="row">
-	  <div class="column">
-			<ul>
-				<li>
-					<h3>Clarinda</h3>
-				</li>
-				</li>
+	<div id="contact">
+		<div class="row">
+			<div class="column">
+				<ul>
+					<li>
+						<h3>Clarinda</h3>
+					</li>
+					</li>
 					Hours: 8am-4pm
-				</li>
-				<li>
-					Days: Monday-Friday
-				</li>
-				<li>
-					<p>216 W Division St
-						Clarinda, IA 51632</p>
-				</li>
-				<li>
-					<h4>Phone Numebrs:</h4>
-					<p>Ph. (712) 542-2388</p>
-					<p>F. (712) 542-2984</p>
-				</li>
-			</ul>
-		</div>
-	  <div class="column">
-			<ul>
-				<li><h3>Shenandoah</h3></li>
-				<li>
-					Hours: 8am-4pm
-				</li>
-				<li>
-					Days: Monday-Friday
-				</li>
-				<li>
-					<p>1213 5th Avenue
-						Shenandoah, IA 51601</p>
-				</li>
-				<li>
-					<h4>Phone Numebrs:</h4>
-					<p>Ph. (712) 581-7900</p>
-					<p>F. (712) 522-1983</p>
-				</li>
-			</ul>
-		</div>
-	  <div class="column">
-			<ul>
-				<li><h3>Red Oak</h3></li>
-				<li>
-					Hours: 8am-4pm
-				</li>
-				<li>
-					Days: Monday-Saturday
-				</li>
-				<li>
-					<p>1000 N Broadway St.
-						Red Oak, IA 51566</p>
-				</li>
-				<li>
-					<h4>Phone Numebrs:</h4>
-					<p>Ph. (712) 581-7900</p>
-					<p>F. (712) 522-1983</p>
-				</li>
-			</ul>
+					</li>
+					<li>
+						Days: Monday-Friday
+					</li>
+					<li>
+						<p>216 W Division St
+							Clarinda, IA 51632</p>
+					</li>
+					<li>
+						<h4>Phone Numebrs:</h4>
+						<p>Ph. (712) 542-2388</p>
+						<p>F. (712) 542-2984</p>
+					</li>
+				</ul>
+			</div>
+			<div class="column">
+				<ul>
+					<li>
+						<h3>Shenandoah</h3>
+					</li>
+					<li>
+						Hours: 8am-4pm
+					</li>
+					<li>
+						Days: Monday-Friday
+					</li>
+					<li>
+						<p>1213 5th Avenue
+							Shenandoah, IA 51601</p>
+					</li>
+					<li>
+						<h4>Phone Numebrs:</h4>
+						<p>Ph. (712) 581-7900</p>
+						<p>F. (712) 522-1983</p>
+					</li>
+				</ul>
+			</div>
+			<div class="column">
+				<ul>
+					<li>
+						<h3>Red Oak</h3>
+					</li>
+					<li>
+						Hours: 8am-4pm
+					</li>
+					<li>
+						Days: Monday-Saturday
+					</li>
+					<li>
+						<p>1000 N Broadway St.
+							Red Oak, IA 51566</p>
+					</li>
+					<li>
+						<h4>Phone Numebrs:</h4>
+						<p>Ph. (712) 581-7900</p>
+						<p>F. (712) 522-1983</p>
+					</li>
+				</ul>
+			</div>
 		</div>
 	</div>
-</div>
-<footer>
-    <hr>
-    <p class="copyright-text">Copyright &copy; 2021 Waubonsie Mental Health Center
-    </p>
-</footer>
+	<footer>
+		<hr>
+		<p class="copyright-text">Copyright &copy; 2021 Waubonsie Mental Health Center
+		</p>
+	</footer>
 </body>
+
 </html>
