--- a/providers.html
+++ b/providers.html
@@ -23,6 +23,7 @@
 	<div id="contact">
 		<h1>Get to Know Our Team!</h1>
 		<h2>Outpatient Therepy Providers:</h2>
+		<img src="Susan.jpg" alt="Susan" style="float:left;width:300px;">
 		<h3>Susan Ecker, LISW</h3>
 		<ul>
 			<li>
@@ -36,6 +37,7 @@
 					hiking, golfing, gardening, and watercolor painting. Susan holds a strong belief in mind body connection and practices yoga and meditation.</p>
 			</li>
 		</ul>
+		<img src="Amber.jpg" alt="Amber" width="300">
 		<h3>Amber Butt, NCC, LMHC, CADC</h3>
 		<ul>
 			<li>
@@ -48,7 +50,8 @@
 				<p>When Amber's not working, she loves spending time with her family, walking and playing with her newest family member—Remy the black lab, and watching her boys’ many sporting events.</p>
 			</li>
 		</ul>
-		<h3>Jason Wain, TLMHC, NCC</h3>
+		<img src="Jason Swain.jpg" alt="Jason" width="300">
+		<h3>Jason Swain, TLMHC, NCC</h3>
 		<ul>
 			<li>
 				<p><strong>Bio:</strong> Jason Swain was raised in Del Rio, Texas. He left Del Rio at the age of 19 to explore the world while serving his country. Jason served in the US Army for 21 years. His time in the Army included tours of duty in
@@ -64,6 +67,7 @@
 				<p>Jason works with individuals who have experienced trauma, depression, anxiety, and other mental health challenges.</p>
 			</li>
 		</ul>
+		<img src="kev2 (1).png" alt="Kevin" width="300">
 		<h3>Kevin Robertson, LMHC</h3>
 		<ul>
 			<li>
@@ -76,6 +80,7 @@
 				<p>Kevin is committed to assisting each individual build on their existing strength to live their best possible life.</p>
 			</li>
 		</ul>
+		<img src="Caroline.jpg" alt="Caroline" width="300">
 		<h3>Caroline Overmiller, LPC</h3>
 		<ul>
 			<li>
@@ -93,6 +98,7 @@
 			</li>
 		</ul>
 		<h2>Medication Management Providers:</h2>
+		<img src="steph1.png" alt="Stephanie" width="300">
 		<h3>Stephanie Gray, ARNP, FNP, PMHNP</h3>
 		<ul>
 			<li>
@@ -107,6 +113,7 @@
 				<p>Although, I have carried these advanced degrees for an extended period of time, I am a nurse and love to teach students at all levels….Empower those that are our future!</p>
 			</li>
 		</ul>
+		<img src="Denise Pic for Website.jpg" alt="Denise" width="300">
 		<h3>Denise Crosson, PHD, FNP</h3>
 		<ul>
 			<li>
@@ -121,6 +128,7 @@
 				<p>Denise has been a provider at WMHC since August 2017. She provides telehealth services in Clarinda, Red Oak, and Villisca.</p>
 			</li>
 		</ul>
+		<img src="Carla Abel-Zieg.jpg" alt="Carla" width="300">
 		<h3>Carla Abel-Zieg, ARNP</h3>
 		<h2>The Rest of Our Team!</h2>
 		<p>In addition to our licensed medication management and outpatient therapy providers, WMHC is proud to employ a diverse staff representing multiple levels of education, experience, and licensure. Our team includes LPN's, RN's, Peer & Family Peer
