--- a/comsupser.html
+++ b/comsupser.html
@@ -18,7 +18,25 @@
 		<p>24/7 Crisis Support Hotline ---- (712) 303-7066</p>
 	</div>
 
+	<div class="services">
+		<h1>Community Support Services</h1>
+	</div>
+	<table>
+			<tr>
+					<td>
+						<p>Community Support Services provides home and community-based support to individuals living with serious, persistent mental illness. Together with their assigned Community Support Specialist, clients in this program work on setting, meeting, and maintaining their wellness goals!
+ </p>
 
+					<td><img src="C:\Users\S535331\Desktop\project\client-project-group2morganburright\Client Files\Client Files\Images\beyou.png"
+					alt="beyou"></td>
+			</tr>
+	</table>
+
+	<h3>Who's eligible to receive this service?</h3>
+	<p>This service is available to adults living in the counties listed above, with a history of psychiatric treatment more intensive than outpatient care, more than once in their lifetime, that are in need of assistance/additional supports in order to function in their community. Iowa Medicaid or regional funding are required for eligibility.
+</p>
+	<h3>Where can I get this service? </h3>
+ 	<p>Page, Fremont, and Montgomery Counties</p>
 
 <footer>
 		<hr>
