--- a/scl.html
+++ b/scl.html
@@ -18,6 +18,26 @@
 		<p>24/7 Crisis Support Hotline ---- (712) 303-7066</p>
 	</div>
 
+	<div class="services">
+		<h1>Supported Community Living</h1>
+	</div>
+	<table>
+			<tr>
+					<td>
+						<p>Like CSS, Supported Community Living also provides home and community-based support to individuals living with serious, persistent mental illness. Together with their assigned Supported Community Living Worker, clients in this program work to develop coping and life skills needed to participate more fully in their communities.
+ </p>
+
+					<td><img src="C:\Users\S535331\Desktop\project\client-project-group2morganburright\Client Files\Client Files\Images\Roxy Smith.jpg"
+					alt="insession"></td>
+			</tr>
+	</table>
+
+	<h3>Who's eligible to receive this service?</h3>
+	<p>This service is available to adults living in the counties listed above, with a history of psychiatric treatment more intensive than outpatient care, more than once in their lifetime, that are in need of assistance/additional supports in order to function in their community. Iowa Medicaid or regional funding are required for eligibility.
+</p>
+	<h3>Where can I get this service? </h3>
+	<p>Page, Fremont, and Montgomery Counties
+</p>
 
 <footer>
     <hr>
