--- a/services.html
+++ b/services.html
@@ -17,7 +17,34 @@
 	<div class="csh">
 		<p>24/7 Crisis Support Hotline ---- (712) 303-7066</p>
 	</div>
+	<div class="services">
+		<h1>Services</h1>
+	</div>
 
+
+		<table>
+			<tr>
+				<td>
+		  		<a href="ot.html"><img src="C:\Users\S535331\Desktop\project\client-project-group2morganburright\Client Files\Client Files\Images\image1.jpeg" alt="outpatienttherapy" class="image" style="width:100%">
+				</td>
+				<td>
+					<a href="mm.html"><img src="C:\Users\S535331\Desktop\project\client-project-group2morganburright\Client Files\Client Files\Images\image2.jpeg" alt="medicationmanagement" class="image" style="width:100%">
+				</td>
+			<tr>
+				<td>
+					<a href="comsupser.html"><img src="C:\Users\S535331\Desktop\project\client-project-group2morganburright\Client Files\Client Files\Images\image3.jpeg" alt="communitysupportservices" class="image" style="width:100%">
+				</td>
+				<td>
+					<a href="scl.html"><img src="C:\Users\S535331\Desktop\project\client-project-group2morganburright\Client Files\Client Files\Images\image4.jpeg" alt="supportedcommunityliving" class="image" style="width:100%">
+				</td>
+			<tr>
+				<td>
+					<a href="ihh.html"><img src="C:\Users\S535331\Desktop\project\client-project-group2morganburright\Client Files\Client Files\Images\image5.jpeg" alt="integratedhealthhome" class="image" style="width:100%">
+				</td>
+				<td>
+					<a href="pss.html"><img src="C:\Users\S535331\Desktop\project\client-project-group2morganburright\Client Files\Client Files\Images\image0 (12).jpeg" alt="peersupportservices" class="image" style="width:100%">
+				</td>
+		</table>
 
 <footer>
     <hr>
