--- a/ot.html
+++ b/ot.html
@@ -18,6 +18,26 @@
 		<p>24/7 Crisis Support Hotline ---- (712) 303-7066</p>
 	</div>
 
+	<div class="services">
+		<h1>Outpatient Therapy</h1>
+	</div>
+	<table>
+			<tr>
+					<td>
+						<p>Therapy is an excellent resource for individuals facing a myriad of challenges ranging from depression or
+							anxiety to trauma- and everything in between. Our licensed staff is trained to work with individuals, couples,
+							and families. Types of therapy offered include Cognitive Behavioral Therapy, EMDR, Play Therapy, and more. </p>
+
+					<td><img src="C:\Users\S535331\Desktop\project\client-project-group2morganburright\Client Files\Client Files\Images\DSC01725 (1).jpg"
+					alt="insession"></td>
+			</tr>
+	</table>
+
+	<h3>Who's eligible to receive this service?</h3>
+	<p>This service is available to adults and children of all ages, from any community, that are capable of attending appointments onsite,
+		 or from their homes via telehealth during standard business hours.</p>
+	<h3>Where can I get this service? </h3>
+ 	<p>Clarinda, Red Oak, Shenandoah, & at home via telehealth!</p>
 
 <footer>
     <hr>
