--- a/FAQ.html
+++ b/FAQ.html
@@ -1,28 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>Waubonsie Mental Health Center</title>
-		<meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <div class="topnav">
-    <a class="active" href="index.html">Home</a>
-    <a href="services.html">Services</a>
-    <a href="providers.html">Providers</a>
-    <a href="FAQ.html">FAQ</a>
-    <a href="extrahelp.html">Extra Help</a>
-    <a href="contact.html">Contact</a>
-  </div>
+
+<head>
+	<title>Waubonsie Mental Health Center</title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" href="style.css">
+</head>
+<div class="topnav">
+	<a class="active" href="index.html">Home</a>
+	<a href="services.html">Services</a>
+	<a href="providers.html">Providers</a>
+	<a href="FAQ.html">FAQ</a>
+	<a href="extrahelp.html">Extra Help</a>
+	<a href="contact.html">Contact</a>
+</div>
+
 <body>
 	<div class="csh">
 		<p>24/7 Crisis Support Hotline ---- (712) 303-7066</p>
 	</div>
+	<div id="contact">
+		<h2>Frequently Asked Questions:</h2>
+		<h3>How have you adjusted your services to adapt to the COVID-19 pandemic?</h3>
+		<ul>
+			<li>
+				<p>At Waubonsie, the safety of our clients and staff is our highest priority. To mitigate the risk of a Covid infection occurring at one of our sites, we've implemented increased cleaning/hygiene measures throughout our facilities and have
+					vastly expanded our telehealth offerings to offer services to clients from the comfort and safety of their own homes. Additionally, all staff, clients, and others entering one of our facilities may choose to wear a mask if that is their
+					preference. Individuals exhibiting signs of illness at the time of their appointment will be provided with the option to receive services via telehealth from their homes.</p>
+			</li>
+		</ul>
+		<h3>How do I set up services?</h3>
+		<ul>
+			<li>
+				<p>Simply call any one of our offices during business hours, and one of our support staff will assist you!</p>
+			</li>
+		</ul>
+		<h3>Do you accept insurance?</h3>
+		<ul>
+			<li>
+				<p>Yes we do! Waubonsie Mental Health Center currently accepts a wide variety of insurance plans. Please call any one of our offices for more information.</p>
+			</li>
+		</ul>
+		<h3>I'm unisured or cannot afford my co-pay, am I still eligible for services?</h3>
+		<ul>
+			<li>
+				<p>Yes you are! Waubonsie accepts private pay clients, with payment due at check in. WMHC also offers a sliding fee payment scale to individuals meeting certain income requirements, which may partially or completely cover the cost of your
+					services.</p>
+			</li>
+		</ul>
+		<h3>Some of the things I need to talk about are very personal - will discussions with my provider remain private and confidential?</h3>
+		<ul>
+			<li>
+				<p>As an accredited Community Mental Health Center, we are legally and ethically required by HIPAA to protect your healthcare information. We will not release any information about your care- or even confirm your status as a patient- to an
+					outside entity without your written permission. The one exception to this rule is in the event that we believe that there is a serious risk to your safety or someone else's. In such a situation, we would only provide pertinent information
+					to the appropriate authorities required to ensure yours and others safety.</p>
+			</li>
+		</ul>
+	</div>
 
-
-<footer>
-    <hr>
-    <p class="copyright-text">Copyright &copy; 2021 Waubonsie Mental Health Center
-    </p>
-</footer>
+	<footer>
+		<hr>
+		<p class="copyright-text">Copyright &copy; 2021 Waubonsie Mental Health Center
+		</p>
+	</footer>
 </body>
+
 </html>
