--- a/providers.html
+++ b/providers.html
@@ -23,7 +23,7 @@
 	<div id="contact">
 		<h1>Get to Know Our Team!</h1>
 		<h2>Outpatient Therepy Providers:</h2>
-		<img src="Susan.jpg" alt="Susan" style="float:left;width:300px;">
+		<img src="C:\Users\s540549\Documents\GitHub\client-project-group2morganburright\Images\Susan.jpg" alt="Susan" style="float:left;width:300px;">
 		<h3>Susan Ecker, LISW</h3>
 		<ul>
 			<li>
