home page stuff
image

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	</div>
 	<br>
 	<div class="homeimage">
-		<img src="WMHC 2021.jpg" alt="Waubonsie Mental Health Center">
+		<img src="wmhc.jpg" alt="Waubonsie Mental Health Center">
 	</div>
 
 	<table>
