--- a/pss.html
+++ b/pss.html
@@ -20,7 +20,7 @@
 		<p>24/7 Crisis Support Hotline ---- (712) 303-7066</p>
 	</div>
 	<div class="services">
-		<h1>Integrated Health Home</h1>
+		<h1>Peer Support Services</h1>
 	</div>
 	<table>
 		<tr>
