--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					it has been our mission to provide accessible, affordable, quality mental health
 					services to the people of southwest Iowa.</p>
 				<p><i>The Center does not discriminate in regard to race, color, creed, national origin, sex, religion, age,
-						sexual orientation, physical disability, or mental disability in providing services in any of our programs.</p>
+						sexual orientation, physical disability, or mental disability in providing services in any of our programs.</i></p>
 			</td>
 			<td><img src="Images\Dream big.jpg" alt="Dream Big"></td>
 		</tr>
@@ -45,7 +45,7 @@
 					<li>
 						<h3>Clarinda</h3>
 					</li>
-					</li>
+					<li>
 					Hours: 8am-4pm
 					</li>
 					<li>
