Providers Additions and Overhaul
Reworked the Design of Providers page to better fit the rest of the website, fixed titles on several pages, and added the remaining providers

--- a/FAQ.html
+++ b/FAQ.html
@@ -21,7 +21,9 @@
 	<div class="csh">
 		<p>24/7 Crisis Support Hotline ---- (712) 303-7066</p>
 	</div>
-	<h2>Frequently Asked Questions:</h2>
+	<div class="services">
+		<h1>Frequently Asked Questions:</h1>
+	</div>
 	<div id="contact">
 		<h3>How have you adjusted your services to adapt to the COVID-19 pandemic?</h3>
 		<ul>
