--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 	</div>
 	<main>
 		<div class="title2">
-			<h2>Our Locations and When You Can Reach Out to Us</h2>
+			<h2>Our Locations and When You Can Reach Out to Us!</h2>
 		</div>
 		<div id="contact">
 			<table>
@@ -43,8 +43,8 @@
 							</li>
 							<li>
 								<h4>Phone Numbers:</h4>
-								<p>Ph. (712) 542-2388</p>
-								<p>F. (712) 542-2984</p>
+								<p>Ph. <a href="tel:7125422388">(712) 542-2388</a></p>
+								<p>F. <a href="tel:7125422984">(712) 542-2984</a></p>
 							</li>
 						</ul>
 					</td>
@@ -70,8 +70,8 @@
 							</li>
 							<li>
 								<h4>Phone Numbers:</h4>
-								<p>Ph. (712) 581-7900</p>
-								<p>F. (712) 522-1983</p>
+								<p>Ph. <a href="tel:7125817900">(712) 581-7900</a></p>
+								<p>F. <a href="tel:7125221983">(712) 522-1983</a></p>
 							</li>
 						</ul>
 					</td>
@@ -97,8 +97,8 @@
 							</li>
 							<li>
 								<h4>Phone Numbers:</h4>
-								<p>Ph. (712) 581-7900</p>
-								<p>F. (712) 522-1983</p>
+								<p>Ph. <a href="tel:7125817900">(712) 581-7900</a></p>
+								<p>F. <a href="tel:7125221983">(712) 522-1983</a></p>
 							</li>
 						</ul>
 					</td>
