edited html and css

--- a/services.html
+++ b/services.html
@@ -9,6 +9,23 @@
 	<meta name="keywods" content="Mental Health, Waubonsie, Support, Susan Ecker">
 </head>
 
+<style>
+.services p {
+  text-align: center;
+}
+.services a:link, a:visited {
+  background-color: #4eaee1;
+  color: white;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+.services a:hover, a:active {
+  background-color: #86c340;
+}
+</style>
 
 
 <div class="topnav">
@@ -25,6 +42,7 @@
 		<p>24/7 Crisis Support Hotline ---- (712) 303-7066</p>
 		<p>Hope 4 Iowa Crisis Line ---- (844) 673-4469</p>
 	</div>
+
 	<div class="services">
 		<h1>Services</h1>
 
